# dde-control-center

./: .gitignore  CMakeLists.txt
configs/: org.deepin.dde.control-center.update.json
include/interface/: moduleinterface.h
include/widgets/: switchwidget.h
src/frame/: CMakeLists.txt
src/frame/window/: accessible.h  insertplugin.cpp  mainwindow.cpp  utils.h
src/plugins/: CMakeLists.txt
src/plugins/update/: updatemodule.cpp  updatemodule.h
src/plugins/update/module/: common.h  update.qrc  updateiteminfo.cpp  updateiteminfo.h  updatemodel.cpp  updatemodel.h  updatework.cpp  updatework.h
src/plugins/update/window/: accessible.h  mirrorswidget.cpp  updatecontrolpanel.cpp  updatecontrolpanel.h  updatectrlwidget.cpp  updatectrlwidget.h  updatesettings.cpp  updatesettings.h  updatewidget.cpp  updatewidget.h
src/plugins/update/window/widgets/: appstoreupdateitem.cpp  downloadcontrolpanel.cpp  downloadcontrolpanel.h  loadingitem.cpp  loadingitem.h  resultitem.cpp  resultitem.h  unknownupdateitem.cpp  updatemodesettingitem.cpp  updatemodesettingitem.h  updatesettingitem.cpp  updatesettingitem.h
